# fdk-rss-atom-feed

./: .flake8  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  mypy.ini  noxfile.py  openapi.yml  pyproject.toml
.github/workflows/: audit.yaml  constraints.txt  dependabot.yaml  deploy-prod&demo.yaml  deploy-staging.yaml
deploy/base/: deployment-fdk-rss-atom-feed.yaml  kustomization.yaml  service-fdk-rss-atom-feed.yaml
deploy/demo/: env.yaml  kustomization.yaml
deploy/prod/: env.yaml  kustomization.yaml
deploy/staging/: env.yaml  kustomization.yaml
fdk_rss_atom_feed/: __init__.py  app.py  client.py  config.py  endpoint.py  feed.py  gunicorn_conf.py  model.py  query.py  query_old.py  translation.py
tests/: conftest.py  utils.py
tests/contract/: test_feed_format.py  test_liveness.py
tests/data/: atom.xml  atom_siri.xml  datasets.json  rss.xml  rss_grunnkretser.xml
tests/integration/: test_end_to_end.py  test_query.py
tests/test_data/: mock_response0.json
tests/unit/: test_feed_generation.py  test_json_serialization.py  test_query_construction.py  test_search_param_validation.py  test_translation.py
