[tool.poetry]
authors = ["Digdir <fellesdatakatalog@digdir.no>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = ""
homepage = "https://github.com/Informasjonsforvaltning/fdk-rss-atom-feed"
license = "Apache-2.0"
name = "fdk-rss-atom-feed"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/fdk-rss-atom-feed"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
feedgen = "^1.0.0"
gunicorn = "^23.0.0"
Flask = "^3.1.0"
Flask-RESTful = "^0.3.10"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
codecov = "^2.1.13"
coverage = "^7.6.12"
flake8 = "^7.1.2"
flake8-annotations = "^3.1.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.12.12"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
mypy = "^1.15.0"
pep8-naming = "^0.15.1"
pytest = "^8.3.4"
pytest-cov = "^6.3.0"
requests = "^2.32.3"
pytest-docker = "^3.2.0"
requests-mock = "^1.12.1"
nox-poetry = "^1.1.0"
types-requests = "^2.32.4.20250809"
pip-audit = "^2.9.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
omit = []
source = ["fdk_rss_atom_feed"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "pytest_mock.*",
]

[tool.pytest.ini_options]
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
  "contract: marks test as contract (slow)",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
