[tool.poetry]
authors = ["Digdir <fellesdatakatalog@digdir.no>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = ""
homepage = "https://github.com/Informasjonsforvaltning/fdk-rss-atom-feed"
license = "Apache-2.0"
name = "fdk-rss-atom-feed"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/fdk-rss-atom-feed"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
feedgen = "^1.0.0"
gunicorn = "^23.0.0"
Flask = "^3.1.2"
Flask-RESTful = "^0.3.10"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
codecov = "^2.1.13"
coverage = "^7.13.0"
flake8 = "^7.3.0"
flake8-annotations = "^3.2.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.4.0"
flake8-bugbear = "^25.11.29"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.19.2"
mypy = "^1.19.1"
pep8-naming = "^0.15.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
requests = "^2.32.5"
pytest-docker = "^3.2.5"
requests-mock = "^1.12.1"
nox-poetry = "^1.2.0"
types-requests = "^2.32.4.20250913"
pip-audit = "^2.10.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
omit = []
source = ["fdk_rss_atom_feed"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "pytest_mock.*",
]

[tool.pytest.ini_options]
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
  "contract: marks test as contract (slow)",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
